# generala

./: .git-blame-ignore-revs  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  pypi-publish.yml
generala/: __init__.py  __main__.py  _cli.py  categories.py
